# bleatbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  prj.conf  sysbuild.cmake
.claude/: settings.json
CAD/: BleatBox.3mf  BleatBox.f3d
app/: CMakeLists.txt  prj.conf  sysbuild.cmake
app/boards/: adafruit_feather_nrf52840_nrf52840_uf2.overlay
app/src/: accel.c  accel.h  audio.c  audio.h  battery.h  ble.c  ble.h  ble_encode.h  broadcast_log.c  broadcast_log.h  broadcast_log_core.c  broadcast_log_core.h  compose.c  compose.h  device_config.c  device_config.h  device_config_parse.c  device_config_parse.h  events.h  main.c  message.c  message.h  ota.c  sdcard.c  sdcard.h  shell.c  vs1053b.c  wrap_to_range.h
boards/: adafruit_feather_nrf52840.overlay  adafruit_feather_nrf52840_nrf52840_uf2.overlay  bleatbox-partitions.dtsi
common/: bleatbox-partitions.dtsi
docs/: index.md
scripts/: bleat_send.py  bleatctl.py  compile_patch.py  make_ota_image.py  merge_uf2.py
src/: accel.c  accel.h  assignments.c  assignments.h  audio.c  audio.h  battery.c  ble.c  ble.h  ble_ota.h  broadcast_log.h  broadcast_log_core.h  clamp.c  clamp.h  compose.c  device_config.c  device_config.h  device_config_parse.c  device_config_parse.h  devices.h  events.h  fw_image.c  fw_image.h  main.c  message.c  ota.h  sdcard.c  sdcard.h  shell.c  sounds.c  sounds.h  sounds_match.c  sounds_match.h  vibration.c  vibration.h  vs1053b.c  vs1053b.h  wrap_to_range.c
tests/: CMakeLists.txt  assignments_test.cpp  ble_encode_test.cpp  ble_ota_test.cpp  broadcast_log_core_test.cpp  clamp_test.cpp  compose_test.cpp  device_config_parse_test.cpp  fw_image_test.cpp  message_test.cpp  sounds_match_test.cpp  wrap_to_range_test.cpp
tests/fakes/zephyr/random/: random.h
updater/: CMakeLists.txt  prj.conf
updater/boards/: adafruit_feather_nrf52840_nrf52840_uf2.overlay
updater/src/: main.c
